--- a/res/layout/picl_login.xml
+++ b/res/layout/picl_login.xml
@@ -10,7 +10,7 @@
 
 	<TextView
 		style="@style/SyncTop"
-		android:text="@string/sync_title_connect" />
+		android:text="@string/picl_account_activity_title" />
 
 	<ScrollView
 		style="@style/SyncMiddle"
@@ -20,6 +20,16 @@
 	        android:orientation="vertical"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content">
+			
+			<TextView
+			    android:id="@+id/hint"
+			    android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:text="Persona is loading..."
+				android:textSize="16dp"
+			    />
+	        
+	        
 			<EditText
 				android:id="@+id/email"
 				android:layout_width="match_parent"
@@ -39,13 +49,6 @@
 				android:imeOptions="actionGo"
 				android:inputType="textPassword"
 				android:visibility="gone" />
-			
-			<TextView
-			    android:id="@+id/hint"
-			    android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="Persona is loading..."
-			    />
 			
 			<WebView
 			    android:id="@+id/webview"
