Bug 850946 - Update res/values{-v11}/themes.xml to use Fennec's light theming. r=trivial
Sync's copies of themes.xml are non-authoritative, in that they don't
get shipped in Fennec.

--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -10,13 +10,13 @@
 
 <resources>
 
-    <style name="Gecko" parent="@android:style/Theme.Holo">
+    <style name="Gecko" parent="@android:style/Theme.Holo.Light">
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
 
-    <style name="Gecko.Dialog" parent="@android:style/Theme.Holo.Dialog">
+    <style name="Gecko.Dialog" parent="@android:style/Theme.Holo.Light.Dialog">
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
