--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -10,7 +10,7 @@
 
 <resources>
 
-    <style name="Gecko" parent="@android:style/Theme">
+    <style name="Gecko" parent="@android:style/Theme.Light">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
