--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -10,14 +10,71 @@
 
 <resources>
 
-    <style name="Gecko" parent="@android:style/Theme.Light">
+    <!--
+        Base application theme. This could be overridden by GeckoBaseTheme
+        in other res/values-XXX/themes.xml.
+    -->
+    <style name="GeckoBase" parent="@android:style/Theme.Light">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Gecko.Dialog" parent="@android:style/Theme.Dialog">
+    <style name="GeckoDialogBase" parent="@android:style/Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
+    <style name="GeckoAwesomeBarBase" parent="GeckoBase">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="GeckoPreferencesBase" parent="GeckoBase">
+        <item name="android:windowNoTitle">false</item>
+        <item name="android:windowBackground">@color/background_normal</item>
+    </style>
+
+    <!--
+        Application Theme. All customizations that are not specific
+        to a particular API level can go here.
+    -->
+    <style name="Gecko" parent="GeckoBase">
+        <!-- Default colors -->
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="android:textColorTertiary">@color/tertiary_text</item>
+
+        <!-- Default inverse colors -->
+        <item name="android:textColorPrimaryInverse">@color/primary_text</item>
+        <item name="android:textColorSecondaryInverse">@color/secondary_text</item>
+        <item name="android:textColorTertiaryInverse">@color/tertiary_text</item>
+
+        <!-- Disabled colors -->
+        <item name="android:textColorPrimaryDisableOnly">@color/text_color_primary_disable_only</item>
+
+        <!-- Hint colors -->
+        <item name="android:textColorHint">@color/text_color_hint</item>
+        <item name="android:textColorHintInverse">@color/text_color_hint_inverse</item>
+
+        <!-- Highlight colors -->
+        <item name="android:textColorHighlight">@color/text_color_highlight</item>
+        <item name="android:textColorHighlightInverse">@color/text_color_highlight_inverse</item>
+
+        <!-- Link colors -->
+        <item name="android:textColorLink">@color/text_color_link</item>
+
+        <!-- TextAppearances -->
+        <item name="android:textAppearance">@style/TextAppearance</item>
+        <item name="android:textAppearanceInverse">@style/TextAppearance.Inverse</item>
+        <item name="android:textAppearanceLarge">@style/TextAppearance.Large</item>
+        <item name="android:textAppearanceMedium">@style/TextAppearance.Medium</item>
+        <item name="android:textAppearanceSmall">@style/TextAppearance.Small</item>
+        <item name="android:textAppearanceLargeInverse">@style/TextAppearance.Large.Inverse</item>
+        <item name="android:textAppearanceMediumInverse">@style/TextAppearance.Medium.Inverse</item>
+        <item name="android:textAppearanceSmallInverse">@style/TextAppearance.Small.Inverse</item>
+    </style>
+
+    <style name="Gecko.Dialog" parent="GeckoDialogBase"/>
 
 </resources>
