--- a/res/layout/fxaccount_setup.xml
+++ b/res/layout/fxaccount_setup.xml
@@ -3,9 +3,27 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
-</LinearLayout>
+<android.support.v4.app.FragmentTabHost xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@android:id/tabhost"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent" >
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical" >
+
+		<TabWidget
+			android:id="@android:id/tabs"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" >
+		</TabWidget>
+
+		<FrameLayout
+			android:id="@+id/tabcontent"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent" >
+		</FrameLayout>
+	</LinearLayout>
+
+</android.support.v4.app.FragmentTabHost>
