--- a/res/values/fxaccount_styles.xml
+++ b/res/values/fxaccount_styles.xml
@@ -5,4 +5,59 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
   <style name="FxAccountTheme" parent="@style/Gecko" />
+
+	<style name="FxAccountContainer">
+		<item name="android:background">#dce3e8</item>
+		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_height">fill_parent</item>
+		<item name="android:layout_weight">1</item>
+	</style>
+
+	<style name="FxAccountMiddle">
+		<item name="android:orientation">vertical</item>
+		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_weight">1</item>
+		<item name="android:padding">10dp</item>
+	</style>
+
+	<style name="FxAccountTop">
+		<item name="android:textAppearance">@android:style/TextAppearance.Large</item>
+		<item name="android:textColor">#404040</item>
+		<item name="android:textSize">30dp</item>
+		<item name="android:textStyle">bold</item>
+		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:padding">4dp</item>
+		<item name="android:layout_marginBottom">30dp</item>
+	</style>
+
+	<style name="FxAccountHeaderItem" parent="@style/FxAccountTextItem">
+		<item name="android:textColor">#404040</item>
+		<item name="android:textStyle">bold</item>
+	</style>
+
+	<style name="FxAccountTextItem" parent="@android:style/TextAppearance.Medium">
+		<item name="android:textColor">#404040</item>
+		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:textSize">15dp</item>
+	</style>
+
+	<style name="FxAccountLinkItem" parent="@style/FxAccountTextItem">
+		<item name="android:clickable">true</item>
+		<item name="android:textColor">#54b8e8</item>
+	</style>
+
+	<style name="FxAccountEditItem" parent="@android:style/Widget.EditText">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:singleLine">true</item>
+		<item name="android:textColor">#404040</item>
+		<item name="android:textColorHint">#808080</item>
+	</style>
+
+  <color name="fxaccount_error_dark">#FDEBE5</color>
+  <color name="fxaccount_error_light">#E24B03</color>
 </resources>
