--- a/res/layout/fxaccount_create_account_fragment.xml
+++ b/res/layout/fxaccount_create_account_fragment.xml
@@ -38,6 +38,14 @@
 					<requestFocus />
 				</EditText>
 
+				<TextView
+					android:id="@+id/email_error"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginBottom="10dp"
+					android:textColor="@color/fxaccount_error_dark"
+					android:visibility="gone" />
+
 				<EditText
 					android:id="@+id/password"
 					style="@style/FxAccountEditItem"
@@ -55,6 +63,14 @@
 					android:ems="10"
 					android:hint="@string/fxaccount_password2_hint"
 					android:inputType="textPassword" />
+
+				<TextView
+					android:id="@+id/password_error"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginBottom="10dp"
+					android:textColor="@color/fxaccount_error_dark"
+					android:visibility="gone" />
 
 				<TextView
 					android:id="@+id/policy"
