--- a/res/layout/fxaccount_setup.xml
+++ b/res/layout/fxaccount_setup.xml
@@ -4,226 +4,16 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/.
 -->
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/viewflipper"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:background="@android:color/white" >
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+    <include layout="@layout/fxaccount_get_started" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+    <include layout="@layout/fxaccount_create_account" />
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+    <include layout="@layout/fxaccount_sign_in" />
 
-                <LinearLayout
-                    android:id="@+id/sign_up_view"
-                    style="@style/FxAccountMiddle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:visibility="visible" >
-
-                    <TextView
-                        style="@style/FxAccountHeaderItem"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="10dp"
-                        android:text="Firefox Accounts" />
-
-                    <TextView
-                        style="@style/FxAccountTextItem"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="10dp"
-                        android:text="Create an account" />
-
-                    <EditText
-                        android:id="@+id/email"
-                        style="@style/FxAccountEditItem"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/fxaccount_textfield_background"
-                        android:ems="10"
-                        android:hint="@string/fxaccount_email_hint"
-                        android:inputType="textEmailAddress" >
-
-                        <requestFocus />
-                    </EditText>
-
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="30dp"
-                        android:orientation="horizontal" >
-
-                        <EditText
-                            android:id="@+id/password"
-                            style="@style/FxAccountEditItem"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/fxaccount_textfield_background"
-                            android:ems="10"
-                            android:hint="@string/fxaccount_password_hint"
-                            android:inputType="textPassword" />
-
-                        <Button
-                            android:id="@+id/show_password"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0"
-                            android:text="Show" >
-                        </Button>
-                    </LinearLayout>
-
-                    <TextView
-                        style="@style/FxAccountTextItem"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="10dp"
-                        android:text="When were you born?" />
-
-                    <Spinner
-                        android:id="@+id/year_spinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="30dp" />
-
-                    <Button
-                        android:id="@+id/sign_up_button"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="30dp"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
-                        android:text="@string/fxaccount_sign_up_button_label" />
-
-                    <TextView
-                        android:id="@+id/sign_in_instead"
-                        style="@style/FxAccountLinkItem"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="10dp"
-                        android:focusable="true"
-                        android:text="@string/fxaccount_sign_in_instead" />
-
-                    <TextView
-                        android:id="@+id/policy"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:text="@string/fxaccount_policy" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/sign_in_view"
-                    style="@style/FxAccountMiddle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="gone" >
-
-                    <TextView
-                        style="@style/FxAccountHeaderItem"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:text="Firefox Accounts" />
-
-                    <TextView
-                        style="@style/FxAccountTextItem"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:text="Connect to an account to access Sync" />
-
-                    <EditText
-                        android:id="@+id/email"
-                        style="@style/FxAccountEditItem"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/fxaccount_textfield_background"
-                        android:ems="10"
-                        android:hint="@string/fxaccount_email_hint"
-                        android:inputType="textEmailAddress" >
-
-                        <requestFocus />
-                    </EditText>
-
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="30dp"
-                        android:orientation="horizontal" >
-
-                        <EditText
-                            android:id="@+id/password"
-                            style="@style/FxAccountEditItem"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@drawable/fxaccount_textfield_background"
-                            android:ems="10"
-                            android:hint="@string/fxaccount_password_hint"
-                            android:inputType="textPassword" />
-
-                        <Button
-                            android:id="@+id/show_password"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0"
-                            android:text="Show" >
-                        </Button>
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/forgot_password"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="30dp"
-                        android:text="@string/fxaccount_forgot_password" />
-
-                    <Button
-                        android:id="@+id/sign_in_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="30dp"
-                        android:paddingLeft="20dp"
-                        android:paddingRight="20dp"
-                        android:text="@string/fxaccount_sign_in_button_label" />
-
-                    <TextView
-                        android:id="@+id/sign_up_instead"
-                        style="@style/FxAccountLinkItem"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="10dp"
-                        android:focusable="true"
-                        android:text="@string/fxaccount_sign_up_instead" />
-                </LinearLayout>
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/remote_error"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:textColor="@color/fxaccount_error_light"
-                android:visibility="gone" />
-        </LinearLayout>
-    </ScrollView>
-
-</LinearLayout>
+</ViewFlipper>
