--- a/res/drawable/fxaccount_button_background_disabled.xml
+++ b/res/drawable/fxaccount_button_background_disabled.xml
@@ -4,12 +4,8 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
-  <solid
-      android:color="@color/fxaccount_error_dark" />
-  <stroke
-      android:width="@dimen/fxaccount_stroke_width"
-      android:color="@color/fxaccount_error_light" />
+       android:shape="rectangle" >
+  <solid android:color="@color/fxaccount_button_background_inactive" />
   <corners
       android:radius="@dimen/fxaccount_corner_radius" />
 </shape>
