--- a/res/drawable/fxaccount_button_background_enabled.xml
+++ b/res/drawable/fxaccount_button_background_enabled.xml
@@ -4,15 +4,8 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
-  <solid
-      android:color="#fdebe5" />
-  <stroke
-      android:width="1dip"
-      android:color="#e24b03" />
-  <padding
-    android:left="8dip"
-    android:top="8dip"
-    android:right="8dip"
-    android:bottom="8dip" />
+       android:shape="rectangle" >
+  <solid android:color="@color/fxaccount_button_background_active" />
+  <corners
+      android:radius="@dimen/fxaccount_corner_radius" />
 </shape>
